<resources>
    <string name="app_name">MyNote1.0</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="splash_welcome">Welcome!</string>
    <string name="discover">Discover</string>
    <string name="login">Log-in</string>
    <string name="sign_in">Sign-in</string>
    <string name="skip"><u>Skip</u> ></string>

    <string name="first_step">Keep track of your studies</string>
    <string name="second_step">Don\'t forget to make a present</string>
    <string name="third_step">Need to visit some places?</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dont_have_account"><u>You don\'t have an account? <b>Sign-In</b></u></string>
    <string name="already_have_account"><u>Do you already have an account? <b>Log-In</b></u></string>

    <string name="login_successful">Logged-In Successfully!</string>
    <string name="sign_in_successful">Signed-In Successfully!</string>
    <string name="registration_error">Something went wrong</string>


    <string name="no_data">No Data Provided</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add_to_list">Add Note</string>
    <string name="clear">Clear</string>

    <string name="default_title">Title</string>
    <string name="default_body">Body</string>
    <string name="default_date">dd/mm/yyyy</string>
    <string name="default_priority">10/10</string>

    <string name="share_button">Share</string>
    <string name="important_chb">Mark as Important</string>
    <string name="priority">Priority</string>
    <string name="priority_input">5/10</string>

    <string name="edit_menu_item">Edit</string>
    <string name="delete_menu_item">Delete</string>

    <string name="delete_dialog">Are you sure to delete?</string>
    <string name="logout_dialog">Are you sure to logout?</string>
    <string name="choice_yes">Yes</string>
    <string name="choice_no">No</string>
</resources>