<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:backgroundTint="@color/card_background_important"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/importantImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/important_icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cardTitle"
            style="@style/DefaultText.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/default_title"
            app:layout_constraintBottom_toTopOf="@id/cardBody"
            app:layout_constraintStart_toEndOf="@id/importantImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cardBody"
            style="@style/DefaultText.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_body"
            app:layout_constraintBottom_toTopOf="@id/cardPriority"
            app:layout_constraintStart_toStartOf="@+id/cardTitle"
            app:layout_constraintTop_toBottomOf="@id/cardTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cardPriority"
            style="@style/DefaultText.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_priority"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/cardBody"
            app:layout_constraintTop_toBottomOf="@+id/cardBody" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cardDate"
            style="@style/DefaultText.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/default_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/cardPriority" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cardBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>