<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.fragment.onboarding.OnboardingFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/discoverButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:text="@string/discover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginOptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_option"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/discoverButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/loginButtonText"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBaseline_toBaselineOf="@id/loginOptionText"
        app:layout_constraintStart_toEndOf="@id/loginOptionText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>